Version 11     ???

--Fixed so that you can't click on an opponent's possible square after the game
  board starts fading out post-opponent-fold.  Before, the locked square
  arrows would linger after the fade (thanks Nathan C).




Version 10     Live Server Fixes

--Even more detailed game logging to catch DENIED bug during wait_move.

--Fixed other game list on waiting screen to ignore games that are ending due
  to players leaving.

--Finally found and fixed the DENIED BY SERVER bug during wait_move.  Server
  is now more robust when dealing with unexpected player request orderings.

--Added a grace period to server-side enforcement of move time limit to allow
  for one client retry during a network outage.

--Added number at the top of each bar on users graphs.




Version 10     2014-December-2

--Fixed stale list of other games when returning to waiting for opponent.

--Changed row coloring of our row to make our possible squares from their
  perspective more visible.  Changed reveal black-stroking to ensure that
  all squares in row that they gave to themselves are visible at the end
  of the game.

--Changed FOLD key command to f instead of x (thanks Zed).

--Added left/right arrow keys for picking reveal column (thanks Zed).





Version 9      Live Server Fixes

--Added detailed logging around ending games to catch DENIED bug during
  wait_move.





Version 9      2014-November-27

--Fixed client bug in coin distribution after a tie.

--Fixed confusing behavior when opponent bets less than us and then folds (our
  larger bet is now shown moving into the pot before the payout---before, our
  larger bet was not shown moving into the pot).

--Fixed bugs in possible score graph update when sliders are dragged over
  blocked columns or when one slider pushes another out of the way.

--Fixed bug when opponent leaves game right before start of next round (board
  would fade back in and redraw all color strokes from the last round).
